<?xml version="1.0"?>
<package format="2">
  <name>bfft_can_bus_msgs_to_ros_topic</name>
  <version>0.0.1</version>
  <description>The bfft_can_bus_msgs_to_ros_topic package</description>

  <maintainer email="bf-formula@hs-offenburg.de">Black Forest Formula Team</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Black-Forest-Formula-Team/bfft_can_bus_msgs_to_ros_topic</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
